--- a/package.json
+++ b/package.json
@@ -5,20 +5,28 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "deldy@deldysoft.dk",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.7.6",
+    "babel-jest": "^12.0.2",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "react-addons-test-utils": "^15.0.2",
+    "react-tools": "^0.13.3",
     "webpack": "^1.12.15",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
     "react": "^15.0.1",
     "react-dom": "^15.0.1"
-  }
+  },
+  "jest": {
+    "testDirectoryName": "test",
+    "unmockedModulePathPatterns": ["<rootDir>/node_modules/react"]
+  },
 }
